# DocumentPanda

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt
.github/: dependabot.yml
DocumentPanda/: settings.py  urls.py  wsgi.py
common/: mixins.py
customer/: forms.py  models.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_add_invoice_address_to_customer.py  0002_customer_currency.py  0003_split_address_to_street_and_city.py
django_legacy/: .gitignore  requirements.txt
django_legacy/DocumentPanda/: settings.py  urls.py  wsgi.py
django_legacy/dp_customer/: models.py
django_legacy/dp_report/: apps.py  models.py  urls.py  views.py
django_legacy/templates/: base.html
docker/: Dockerfile
dp_customer/: apps.py
invoice/: forms.py  models.py  pdf.py  urls.py  views.py
invoice/migrations/: 0001_introduce_invoice.py  0002_add_file_path.py  0003_make_contract_number_optinal.py
profile_settings/: apps.py  models.py  urls.py  views.py
profile_settings/migrations/: 0001_introduce_singelton_profile_model.py
reports/: admin.py  forms.py  models.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_auto_20171226_1937.py  0003_auto_20171230_1131.py  0004_auto_20180204_1623.py  0005_auto_20180716_0904.py  0006_auto_20190928_1945.py  0007_auto_20200805_0904.py  0008_add_fixed_price.py
tax/: forms.py  models.py  urls.py  views.py
tax/migrations/: 0001_introduce_tax_model.py  (+2 more)
templates/: base.html
(+24 files in other folders)
