[project]
name = "documentpanda"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-extensions>=4.1",
    "django-solo>=2.4.0",
    "pytz>=2025.2",
    "reportlab>=4.4.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.8",
]
