[project]
name = "documentpanda"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.1",
    "django-extensions==4.1",
    "django-solo==2.5.1",
    "pytz==2025.2",
    "reportlab==4.4.7",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "pytest-sugar==1.1.1",
    "ruff==0.14.11",
]
